tests/fixtures/errors/invalid_preproc_assert_missing_expr.puml
@startuml
!assert
Alice -> Bob: unreachable
@enduml
